// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component 1`] = `
.c0 {
  border: 1px solid #ccc;
  outline: none;
  box-sizing: border-box;
  padding: 4px;
  min-height: 28px;
}

<input
  class="c0"
/>
`;

exports[`Input component with error prop 1`] = `
.c0 {
  border: 1px solid #ccc;
  outline: none;
  box-sizing: border-box;
  padding: 4px;
  min-height: 28px;
  border-color: red;
  color: red;
}

<input
  class="c0"
/>
`;
